<resources>
    <string name="app_name">My AppLab6.1</string>
    <string name="message">Message</string>
    <string name="to">To</string>
    <string name="send">Send</string>
    <string name="activity2MainHeading">Kevins Lab6</string>
    <string name="login">Activity 1</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="checkbox">CheckBox</string>
</resources>